# aws-billing-discord

./: .gitignore  LICENSE  README.md  pyproject.toml  samconfig.toml  template.yaml
.aws-sam/: build.toml
src/: Dockerfile  lambda_function.py
src/app/: lambda_function.py  ssmstore.py  utils.py
